Fix the issue with JLAB reference links displaying as huge distorting the whole card display.

--- a/Styles/japanese_sentence.scss
+++ b/Styles/japanese_sentence.scss
@@ -26,6 +26,15 @@
    .expression, .reading{
       b { font-weight:normal; } }
 
+   .references{
+      a {
+        display: inline-block; /* or block */
+        width: 800px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+   }
 
    #kanji_list {
       line-height: 1;
